# Chonkie.Net

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_CHECKLIST.md  CONTRIBUTING.md  CONTRIBUTORS.md  Chonkie.Net.code-workspace  Chonkie.Net.sln  DEVELOPMENT_NOTES.md  DEVELOPMENT_ROADMAP_FEB_2026.md  DOCUMENTATION_INDEX.md  Directory.Build.props  FEATURE_COMPARISON.md  FEB_4_2026_EVENING_SESSION_SUMMARY.md  FEB_4_2026_LATE_EVENING_SESSION_SUMMARY.md  FEB_4_2026_SESSION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_QUICKSTART.md  INTEGRATION_TESTS_AUDIT.md  LICENSE  LICENSE_HEADERS.md  MASTER_ROADMAP.md  NOTICE  NUGET_PUBLICATION_CHECKLIST.md  PACKAGE_README.md  PHASE_11_3_COMPLETION_SUMMARY.md  PHASE_9_COMPLETION_SUMMARY.md  PORT_PLAN.md  QUICK_REFERENCE_FEB_2026.md  README.md  RELEASE_NOTES_V2_12_0.md  SEMANTIC_CHUNKING_UPDATES.md  STATUS_DASHBOARD.md  chunked_output.json  docker-compose.dcproj  docker-compose.handshakes.yml  (+5 more)
.devcontainer/: .dockerignore  .env.example  .gitignore  CHANGES.md  CHECKLIST.md  Dockerfile  Dockerfile.dotnet  IMPLEMENTATION_SUMMARY.md  PIP_PROXY_FIX.md  PROXY_CONFIGURATION.md  PROXY_STATUS.md  QUICKSTART_VS_PODMAN.md  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  RESTART_PROXY.md  SETUP_FIXES_SUMMARY.md  VISUAL_STUDIO_GUIDE.md  VISUAL_STUDIO_PODMAN_SETUP.md  allowed-domains.txt  apt-proxy.conf  devcontainer.json  docker-compose.yml  setup.ps1  squid.conf
.github/: PULL_REQUEST_TEMPLATE.md
docs/: 00_README.md  ADVANCED_CHUNKERS.md  INDEX.md  (+39 more)
(+314 files in other folders)
